k8s-manifests/java-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: a711bb5e718a7408c9631a0b941e3c5d-481033788.ap-southeast-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-app-service
            port:
              number: 8080
